@@ -69,8 +69,8 @@ class tx_igldapssoauth_pi1_wizicon {
 	}
 }
 
-if (defined('TYPO3_MODE') && $TYPO3_CONF_VARS[TYPO3_MODE]['XCLASS']['ext/ig_ldap_sso_auth/pi1/class.tx_igldapssoauth_pi1_wizicon.php']) {
-	include_once($TYPO3_CONF_VARS[TYPO3_MODE]['XCLASS']['ext/ig_ldap_sso_auth/pi1/class.tx_igldapssoauth_pi1_wizicon.php']);
+if (defined('TYPO3_MODE') && $GLOBALS['TYPO3_CONF_VARS'][TYPO3_MODE]['XCLASS']['ext/ig_ldap_sso_auth/pi1/class.tx_igldapssoauth_pi1_wizicon.php'])) {
+	include_once($GLOBALS['TYPO3_CONF_VARS'][TYPO3_MODE]['XCLASS']['ext/ig_ldap_sso_auth/pi1/class.tx_igldapssoauth_pi1_wizicon.php']);
 }
 
 ?>
